Fix all responsive column wraps

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,6 +3,10 @@
     width: 100%;
     height: 100%;
 } */
+h5.reverse {
+    color: white;
+    margin: 1em 0;
+}
 
 img {
     width: 4rem;
